Closed Bug 396661 Opened 17 years ago Closed 17 years ago

OS/2 build break in nsTextFrameThebes

Categories

(Core :: Layout, defect)

x86
OS/2
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mozilla, Assigned: mozilla)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch obvious workaround (obsolete) — Splinter Review
When compiling nsTextFrameThebes.cpp on OS/2 I get these errors:

X:/trunk/mozilla/layout/generic/nsTextFrameThebes.cpp: In member function `void
nsTextFrame::PaintTextDecorations(gfxContext*, const gfxRect&, const gfxPoint&,
const gfxPoint&, nsTextPaintStyle&, PropertyProvider&)':
X:/trunk/mozilla/layout/generic/nsTextFrameThebes.cpp:3810: error: parse error b
efore `.' token
X:/trunk/mozilla/layout/generic/nsTextFrameThebes.cpp:3814: error: request for m
ember `height' in `size', which is of non-class type `gfxSize ()(...)'
[...]

This is since the checkin from bug 394832. I don't see anything wrong with the code, but maybe GCC 3.3.5 that we are still forced to use has a bug (the problem looks similar to http://gcc.gnu.org/bugzilla/show_bug.cgi?id=11796 to me). Although I am bit surprised that we haven't encountered this problem before, the obvious workaround to use a standard C cast works...
Just to confirm, your patch is working here
Attachment #281437 - Flags: superreview?(roc)
Attachment #281437 - Flags: review?(roc)
I don't want to change back to a C-style cast. You can actually just take the gfxFloat cast out; now that 'app' is a float, the division will be floating point anyway.
Attached patch remove castSplinter Review
Doh! Could have noticed that myself...
Assignee: nobody → mozilla
Attachment #281437 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #281553 - Flags: superreview?(roc)
Attachment #281553 - Flags: review?(roc)
Attachment #281437 - Flags: superreview?(roc)
Attachment #281437 - Flags: review?(roc)
Attachment #281553 - Flags: superreview?(roc)
Attachment #281553 - Flags: superreview+
Attachment #281553 - Flags: review?(roc)
Attachment #281553 - Flags: review+
Attachment #281553 - Flags: approval1.9+
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: