[OS/2] Bug 396661: fix OS/2 build break in nsTextFrameThebes by removing the unnecessary cast, r/sr/a=roc